--- a/modules/nw-autoscaling-ingress-controller.adoc
+++ b/modules/nw-autoscaling-ingress-controller.adoc
@@ -35,7 +35,7 @@ Labels:              <none>
 Annotations:         <none>
 Image pull secrets:  thanos-dockercfg-kfvf2
 Mountable secrets:   thanos-dockercfg-kfvf2
-Tokens:              <none>
+Tokens:              thanos-token-c422q
 Events:              <none>
 ----
 
@@ -61,25 +61,36 @@ EOF
 ----
 
 . Define a `TriggerAuthentication` object within the `openshift-ingress-operator` namespace by using the service account's token.
-
++
+.. Define the `secret` variable that contains the secret by running the following command:
++
+[source,terminal]
+----
+$ secret=$(oc get secret -n openshift-ingress-operator | grep thanos-token | head -n 1 | awk '{ print $1 }')
+----
++
 .. Create the `TriggerAuthentication` object and pass the value of the `secret` variable to the `TOKEN` parameter:
 +
 [source,terminal]
 ----
-$ oc apply -f - <<EOF
-apiVersion: keda.sh/v1alpha1
-kind: TriggerAuthentication
-metadata:
-  name: keda-trigger-auth-prometheus
-  namespace: openshift-ingress-operator
-spec:
-  secretTargetRef:
-  - parameter: bearerToken
-    name: thanos-token
-    key: token
-  - parameter: ca
-    name: thanos-token
-    key: ca.crt
+$ oc process TOKEN="$secret" -f - <<EOF | oc apply -n openshift-ingress-operator -f -
+apiVersion: template.openshift.io/v1
+kind: Template
+parameters:
+- name: TOKEN
+objects:
+- apiVersion: keda.sh/v1alpha1
+  kind: TriggerAuthentication
+  metadata:
+    name: keda-trigger-auth-prometheus
+  spec:
+    secretTargetRef:
+    - parameter: bearerToken
+      name: \${TOKEN}
+      key: token
+    - parameter: ca
+      name: \${TOKEN}
+      key: ca.crt
 EOF
 ----
 
