--- a/virt/release_notes/virt-4-17-release-notes.adoc
+++ b/virt/release_notes/virt-4-17-release-notes.adoc
@@ -66,6 +66,9 @@ This release adds new features and enhancements related to the following compone
 [id="virt-4-17-virtualization"]
 === Virtualization
 
+//CNV-30590 NEW GA Host-side USB passthrough
+* As a cluster administrator, you can xref:../../virt/virtual_machines/advanced_vm_management/virt-configuring-usb-host-passthrough.adoc#virt-configuring-usb-host-passthrough[expose USB devices in a cluster], making them available for virtual machine (VM) owners to assign to VMs. You expose a USB device by first enabling host passthrough and then configuring the VM to access the USB device.
+
 [id="virt-4-17-networking"]
 === Networking
 
