--- a/rosa_architecture/rosa_policy_service_definition/rosa-hcp-service-definition.adoc
+++ b/rosa_architecture/rosa_policy_service_definition/rosa-hcp-service-definition.adoc
@@ -17,7 +17,7 @@ include::modules/rosa-sdpolicy-am-billing.adoc[leveloffset=+2]
 include::modules/rosa-sdpolicy-am-cluster-self-service.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
-.Additional Resources
+.Additional resources
 
 * xref:../../rosa_architecture/rosa_policy_service_definition/rosa-hcp-service-definition.adoc#rosa-sdpolicy-red-hat-operator_rosa-service-definition[Red{nbsp}Hat Operator Support]
 
@@ -25,7 +25,7 @@ include::modules/rosa-sdpolicy-am-cluster-self-service.adoc[leveloffset=+2]
 include::modules/rosa-sdpolicy-instance-types.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
-.Additional Resources
+.Additional resources
 
 For a detailed listing of supported instance types, see xref:../rosa_policy_service_definition/rosa-hcp-instance-types.adoc#rosa-hcp-instance-types[{hcp-title} instance types].
 
@@ -33,7 +33,7 @@ For a detailed listing of supported instance types, see xref:../rosa_policy_serv
 include::modules/rosa-sdpolicy-am-regions-az.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
-.Additional Resources
+.Additional resources
 
 * link:https://docs.aws.amazon.com/general/latest/gr/rosa.html[Red{nbsp}Hat OpenShift Service on AWS endpoints and quotas]
 
