--- a/modules/creating-nfd-cr-cli.adoc
+++ b/modules/creating-nfd-cr-cli.adoc
@@ -13,7 +13,7 @@ As a cluster administrator, you can create a `NodeFeatureDiscovery` CR instance 
 * You have access to an {product-title} cluster
 * You installed the {oc-first}.
 * You logged in as a user with `cluster-admin` privileges.
-* You installed the the NFD Operator.
+* You installed the NFD Operator.
 
 .Procedure
 
