--- a/rosa_architecture/rosa_policy_service_definition/rosa-hcp-instance-types.adoc
+++ b/rosa_architecture/rosa_policy_service_definition/rosa-hcp-instance-types.adoc
@@ -7,13 +7,16 @@ include::_attributes/attributes-openshift-dedicated.adoc[]
 toc::[]
 {hcp-title} offers the following worker node instance types and sizes:
 
+[NOTE]
+====
+Currently, {hcp-title} supports a maximum of 250 worker nodes.
+====
+
 include::modules/rosa-sdpolicy-am-aws-compute-types.adoc[leveloffset=+1]
 
 include::modules/rosa-sdpolicy-am-aws-compute-types-graviton.adoc[leveloffset=+1]
 
 [role="_additional-resources"]
 .Additional resources
-
-* xref:../../rosa_planning/rosa-hcp-limits-scalability.adoc#rosa-hcp-limits-scalability[{hcp-title} limits and scalability]
 
 * link:https://aws.amazon.com/ec2/instance-types[AWS Instance Types]
