--- a/upgrading/rosa-hcp-upgrading.adoc
+++ b/upgrading/rosa-hcp-upgrading.adoc
@@ -8,17 +8,17 @@ toc::[]
 
 include::modules/rosa-hcp-upgrade-options.adoc[leveloffset=+1]
 
-.Additional resources
-* xref:../cli_reference/rosa_cli/rosa-manage-objects-cli.adoc#rosa-edit-machinepool_rosa-managing-objects-cli[ROSA CLI reference: `rosa edit machinepool`]
+// .Additional resources
+// * ../cli_reference/rosa_cli/rosa-manage-objects-cli.adoc#rosa-edit-machinepool_rosa-managing-objects-cli[ROSA CLI reference: `rosa edit machinepool`]
 
 //This cannot be a module if we want to use the xrefs
 [id="rosa-lifecycle-policy_{context}"]
 == Life cycle policies and planning
 
 To plan an upgrade, review the
-ifdef::openshift-rosa,openshift-rosa-classic[]
+ifdef::openshift-rosa[]
 xref:../rosa_architecture/rosa_policy_service_definition/rosa-life-cycle.adoc#rosa-life-cycle[{product-title} update life cycle].
-endif::openshift-rosa,openshift-rosa-classic[]
+endif::openshift-rosa[]
 ifdef::openshift-rosa-hcp[]
 xref:../rosa_architecture/rosa_policy_service_definition/rosa-hcp-life-cycle.adoc#rosa-hcp-life-cycle[{hcp-title} update life cycle].
 endif::openshift-rosa-hcp[]
@@ -47,14 +47,13 @@ Upgrading the entire cluster involves upgrading both the hosted control plane an
 * You have installed and configured the latest version of the ROSA CLI.
 * No other upgrades are in progress or scheduled to take place at the same time as this upgrade.
 
-ifdef::context[:prevcontext: {context}]
 
+ifdef::context[:prevcontext: {context}]
 :context: rosa-hcp-upgrading-whole-cluster
 
 include::modules/rosa-hcp-upgrading-cli-control-plane.adoc[leveloffset=+2]
 
 ifdef::prevcontext[:context: {prevcontext}]
-
 ifdef::context[:prevcontext: {context}]
 
 :context: rosa-hcp-upgrading-whole-cluster
@@ -63,5 +62,6 @@ include::modules/rosa-hcp-upgrading-cli-machinepool.adoc[leveloffset=+2]
 
 ifdef::prevcontext[:context: {prevcontext}]
 ifndef::prevcontext[:!context:]
+//LB: Remove until here if we don't want the "whole cluster" upgrade section
 
-//include::modules/rosa-hcp-upgrading-cli-tutorial.adoc[leveloffset=+1]
+include::modules/rosa-hcp-upgrading-cli-tutorial.adoc[leveloffset=+1]
